--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,10 +48,10 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-FILES
-Num.msg
-)
+# add_message_files(
+# FILES
+# Num.msg
+# )
 
 ## Generate services in the 'srv' folder
 add_service_files(
@@ -158,7 +158,7 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-catkin_install_python(PROGRAMS scripts/qsr_server.py
+catkin_install_python(PROGRAMS scripts/qsr_server.py scripts/qsr_client.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
